fix some spacing on the date and remove copyright on spanish tiles page

--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -409,3 +409,7 @@ sup[id^='footnote-ref'] {
         }
     }
 }
+
+.article-body-spacing {
+    margin-top: 2rem;
+}
